--- a/package.json
+++ b/package.json
@@ -8,15 +8,40 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "browserslist": "defaults, not ie <= 11",
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.9",
+    "@tanstack/react-query": "^4.24.10",
+    "@total-typescript/ts-reset": "^0.3.7",
+    "@trpc/client": "^10.14.0",
+    "@trpc/next": "^10.14.0",
+    "@trpc/react-query": "^10.14.0",
+    "@trpc/server": "^10.14.0",
     "@types/node": "18.14.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.13",
+    "clsx": "^1.2.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "focus-visible": "^5.2.0",
     "next": "13.2.3",
+    "next-auth": "^4.20.1",
+    "postcss-focus-visible": "^8.0.2",
     "react": "18.2.0",
+    "react-aria": "^3.23.1",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-stately": "^3.21.0",
+    "rss-to-json": "^2.1.1",
+    "spotify-web-api-node": "^5.0.2",
+    "tailwindcss": "^3.2.7",
+    "typescript": "4.9.5",
+    "zod": "^3.20.6"
+  },
+  "devDependencies": {
+    "@types/spotify-web-api-node": "^5.0.7",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4"
   }
 }
